[package]
name = "prettear"
version = "0.1.0"
edition = "2021"
authors = ["Slimedragon <slime@intear.tech>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/INTEARnear/prettear"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "5.8.1"
near-sdk-contract-tools = "3.0.2"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
