[package]
name = "prettear"
version = "0.1.0"
edition = "2021"
authors = ["Slimedragon <slime@intear.tech>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/INTEARnear/prettear"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = "5.8.1"
near-sdk-contract-tools = "3.0.2"

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.13.4-rust-1.85.0"
image_digest = "sha256:a9d8bee7b134856cc8baa142494a177f2ba9ecfededfcdd38f634e14cca8aae2"
passed_env = []
container_build_command = ["cargo", "near", "build", "non-reproducible-wasm", "--locked"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
